primal-dual terminado, revisar manualmente

--- a/aprox.bib
+++ b/aprox.bib
@@ -1,8 +1,25 @@
+@article{JV,
+author = {Jain, Kamal and Vazirani, Vijay V.},
+title = {Approximation algorithms for metric facility location and k-Median problems using the primal-dual schema and Lagrangian relaxation},
+year = {2001},
+issue_date = {March 2001},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {48},
+number = {2},
+issn = {0004-5411},
+url = {https://doi.org/10.1145/375827.375845},
+doi = {10.1145/375827.375845},
+abstract = {We present approximation algorithms for the metric uncapacitated facility location problem and the metric k-median problem achieving guarantees of 3 and 6 respectively. The distinguishing feature of our algorithms is their low running time: O(m logm) and O(m logm(L + log (n))) respectively, where n and m are the total number of vertices and edges in the underlying complete bipartite graph on cities and facilities. The main algorithmic ideas are a new extension of the primal-dual schema and the use of Lagrangian relaxation to derive approximation algorithms.},
+journal = {J. ACM},
+month = {mar},
+pages = {274–296},
+numpages = {23},
+keywords = {linear programming, facility location problem, approximation algorithms, Lagrangian relaxation, k-median problem}
+}
+
 @Inbook{Karp1972,
 author="Karp, Richard M.",
-editor="Miller, Raymond E.
-and Thatcher, James W.
-and Bohlinger, Jean D.",
 title="Reducibility among Combinatorial Problems",
 bookTitle="Complexity of Computer Computations: Proceedings of a symposium on the Complexity of Computer Computations, held March 20--22, 1972, at the IBM Thomas J. Watson Research Center, Yorktown Heights, New York, and sponsored by the Office of Naval Research, Mathematics Program, IBM World Trade Corporation, and the IBM Research Mathematical Sciences Department",
 year="1972",
