--- a/main.tex
+++ b/main.tex
@@ -319,7 +319,7 @@ Esse problema é $\NP$-completo, sendo um dos famosos $21$ problemas do Karp~\ci
 \end{proof}
 \subsection{Algoritmos baseados em programação linear}
 Nessa seção vamos mostrar dois algoritmos para o problema de localização de instalações: o arredondamento em programa linear e um algoritmo que utiliza o método primal-dual. \\
-Para isso, vamos modelar o nosso problema como um programa linear inteiro. Vamos relaxá-lo e mostrar o seu dual, que será usado em ambos os algoritmos. \\
+Para isso, vamos modelar o nosso problema como um programa linear inteiro. Vamos relaxá-lo e mostrar o seu dual. \\
 Nosso programa inteiro terá dois tipos de variáveis: uma variável $y_i$ para cada $i \in F$ que terá valor 1 se a instalação $i$ foi aberta e 0 caso contrário, e uma variável $x_{ij}$ para cada $i \in F$ e $j \in D$ que terá valor 1 se o cliente $j$ estiver associado a instalação $i$ e 0 caso contrário. Então o programa inteiro para a instância $I(F,D,c,f)$ é:
 \begin{align}
  \text{Minimizar} \quad & \sum_{i \in F}f_iy_i + \sum_{i\in F,j\in D}c_{ij}x_{ij} \\
@@ -329,6 +329,7 @@ Nosso programa inteiro terá dois tipos de variáveis: uma variável $y_i$ para 
  &y_i \in \{0,1\}, \quad \; \,\forall i\in F.
 \end{align}
 \\
+A restrição (2) garante que todo cliente esteja associado a alguma instalação, a restrição (3) garante que todo cliente esteja associado apenas a instalações abertas.\\ 
 Para a relaxação, apenas impomos que $x_{ij} \geq 0$ e $y_i \geq 0$ no lugar de (4) e (5), respectivamente. Assim, temos o seguinte primal e dual correspondente à nossa relaxação:
     \begin{align}
         \text{Minimizar} \quad & \sum_{i \in F}f_iy_i + \sum_{i\in F,j\in D}c_{ij}x_{ij} \tag{P1} \label{P1}\\
@@ -368,13 +369,13 @@ Pela condição (iii), um cliente que tem orçamento não nulo está associado a
 Vamos assumir que a função custo satisfaz a desigualdade triangular. Como a função custo só está definida de um cliente para uma instalação, então a desigualdade triangular terá uma cara diferente. Para clientes $j,l$ e  instalações $i,k$, vale que
 \[c_{ij} \leq c_{il} + c_{kl} + c_{kj}.\]
 \\
-Vamos construir uma solução $(\bar{v},\bar{w})$ maximal para o dual. Chamamos uma solução $(v,w)$ para o programa dual de maximal se o aumento de coordenadas de $v$ ou $w$ não é uma solução viável com valor objetivo maior.\\
+Vamos construir uma solução $(\overline{v},\overline{w})$ maximal para o dual. Chamamos uma solução $(v,w)$ para o programa dual de maximal se o aumento de coordenadas de $v$ ou $w$ não é uma solução viável com valor objetivo maior.\\
 Vamos utilizar a seguinte definição ao longo da explicação do método.
 \begin{definition}
     Seja $(v,w)$ uma solução viável do dual. Denotamos por $N(j) = \{i \in F:v_j \geq c_{ij}\}$ a \emph{vizinhança} de um cliente $j$ e $N(i) = \{j \in D:v_j \geq c_{ij}\}$ a \emph{vizinhança} de uma instalação $i$.
 \end{definition}
 
-Seja $T \subseteq F$ tal que $T = \{i \in F: \sum_{j \in D} w_{ij} = f_i\}$. Em uma solução maximal $(\bar v, \bar w)$ do dual, todo cliente está na vizinhança de uma instalação em $T$. Caso contrário, seja $j$ um cliente que não está na vizinhança de uma instalação em $T$, claramente as desigualdades \eqref{D3} não são justas para $j$ e qualquer instalação de $T$ e conseguimos aumentar $w^*_{ij}$ para qualquer instalação $i$ que não esteja em $T$. Assim, conseguimos aumentar coordenadas de $v$ e de $w$ e encontrar uma solução com valor objetivo maior e isso contradiz o fato da solução $(v^*,w^*)$ ser maximal. \\
+Seja $T \subseteq F$ tal que $T = \{i \in F: \sum_{j \in D} w_{ij} = f_i\}$. Em uma solução maximal $(\overline v, \overline w)$ do dual, todo cliente está na vizinhança de uma instalação em $T$. Caso contrário, seja $j$ um cliente que não está na vizinhança de uma instalação em $T$, claramente as desigualdades \eqref{D3} não são justas para $j$ e qualquer instalação de $T$ e conseguimos aumentar $\overline{w}_{ij}$ para qualquer instalação $i$ que não esteja em $T$. Assim, conseguimos aumentar coordenadas de $v$ e de $w$ e encontrar uma solução com valor objetivo maior e isso contradiz o fato da solução $(\overline{v},\overline{w})$ ser maximal. \\
 Como cada cliente está na vizinhança de uma instalação que pertence a $T$, abrir todas as instalações em $T$ seria suficiente, mas um cliente poderia ter mais de uma instalação de $T$ na sua vizinhança. Assim, estaríamos contando o orçamento de um cliente na contribuição para a abertura de mais de uma instalação e não podemos fazer isso.\\
 Podemos então escolher um conjunto $T' \subseteq T$ tal que cada cliente esteja na vizinhança de no máximo uma instalação de $T'$ e vamos garantir que um cliente que não esteja na vizinhança de nenhuma instalação de $T'$ esteja próxima a alguma delas. \\
 Nosso algoritmo contará com as seguintes invariantes.
@@ -415,8 +416,11 @@ Nosso algoritmo contará com as seguintes invariantes.
         \EndFunction
     \end{algorithmic}
 \end{algorithm}
-Claramente as coordenadas das variáveis $v$ e $w$ crescerão de maneira uniforme, pois será somado o mesmo valor para elas. Precisamos então garantir que a nossa solução seja sempre viável. Na linha (7:) do algoritmo garantimos que a desigualdade~\eqref{D3} não seja violada para os clientes e as instâncias que não estão na sua vizinhança. Na linha (8:), garantimos que a desigualdade~\eqref{D2} não seja violada para as instalações. Note que aumentar $v_j$ e $w_{ij}$ no mesmo valor nunca violará a desigualdade~\eqref{D3} para algum $j \in D$ e $i \in F$. Assim, $(v,w)$ é uma solução viável para o problema dual.\\
-Para cada cliente $j$ e cada instalação $i$, primeiro aumentaremos apenas as variáveis $v_j$ até que $j$ esteja na vizinhança de $i$, note que nesse momento a desigualdade~\eqref{D3} se torna justa, pois ainda não aumentamos a variável $w_{ij}$. Uma vez que isso acontece, aumentamos uniformemente $v_j$ e $w_{ij}$, assim a desigualdade~\eqref{D3} continuará justa. Desse modo, para $j \in D$ e $i \in N(j)$ vale que \[\tag{*} \label{D3justa}w_{ij} = v_j - c_{ij}.\] \\
+Claramente as coordenadas das variáveis $v$ e $w$ crescerão de maneira uniforme, pois em cada iteração o mesmo valor será somado a elas. Precisamos então garantir que a nossa solução seja sempre viável. Na linha (7:) do algoritmo garantimos que a desigualdade~\eqref{D3} não seja violada para os clientes e as instâncias que não estão na sua vizinhança. Na linha (8:), garantimos que a desigualdade~\eqref{D2} não seja violada para as instalações. Note que aumentar $v_j$ e $w_{ij}$ no mesmo valor nunca violará a desigualdade~\eqref{D3} para algum $j \in D$ e $i \in F$. Assim, $(v,w)$ é uma solução viável para o problema dual.\\
+Para cada cliente $j$ e cada instalação $i$, primeiro aumentaremos apenas as variáveis $v_j$ até que $j$ esteja na vizinhança de $i$, note que nesse momento a desigualdade~\eqref{D3} se torna justa, pois ainda não aumentamos a variável $w_{ij}$. Uma vez que isso acontece, aumentamos uniformemente $v_j$ e $w_{ij}$, assim a desigualdade~\eqref{D3} continuará justa. Desse modo, para $j \in D$ e $i \in N(j)$ vale que 
+\[\tag{*} \label{Djusta:*}  
+w_{ij} = v_j - c_{ij}.
+\] \\
 Note também que ao final do algoritmo $(v,w)$ é uma solução maximal para o problema dual. Isso acontece pois para todo cliente $j$ existe uma instalação $i$ tal que a desigualdade~\eqref{D3} é justa para $i$ e $j$ e, além disso, a desigualdade~\eqref{D2} é justa para $i$. Desse modo, não conseguimos encontrar uma solução viável com valor objetivo apenas aumentando as variáveis, pois $w_{ij}$ não pode ser aumentado e é ele quem está impedindo o aumento de $v_j$. \\
 Para provar a razão de aproximação vamos precisar primeiro de um lema.
 \begin{lemma}
@@ -437,11 +441,11 @@ Agora, podemos mostrar o teorema abaixo.
 \begin{proof}
     Claramente o algoritmo roda em tempo polinomial. O seguinte vale para as instalações de $T'$ e os clientes na sua vizinhança
     \[\sum_{i \in T'} (f_i + \sum_{j \in N(i)} c_{ij}) = \sum_{i \in T'} \sum_{j \in N(i)} (w_{ij} + c_{ij}) = \sum_{i \in T'} \sum_{j \in N(i)} v_j\]
-    em que a primeira igualdade vale pela definição de $T$ e a segunda igualdade vale por~\eqref{D3justa}. Note que o somatório não repete clientes, uma vez que cada cliente não está na vizinhança de duas instalações de $T'$.\\
+    em que a primeira igualdade vale pela definição de $T$ e a segunda igualdade vale por~\eqref{Djusta:*}. Note que o somatório não repete clientes, uma vez que cada cliente não está na vizinhança de duas instalações de $T'$.\\
     Seja $j$ um cliente que não está na vizinhança de nenhuma instalação de $T'$, podemos utilizar o Lema~\ref{lemma:3.9} para esse cliente. Então existe uma instalação de $i \in T'$ tal que $c_{ij} \leq 3v_j$. Como $j$ está associado a instalação de $T'$ mais próximo a ele, vale que $c_{\sigma(j)j} \leq c_{ij}$. Seja $Z$ o conjunto de clientes que não tem vizinhos em $T'$, temos
     \[\sum_{j \in Z}c_{\sigma(j)j} \leq 3\sum_{j \in Z}v_j.\]
     Juntando os limitantes encontrados para os clientes que tem vizinhos em $T'$ e os que não tem, encontramos
-    \[\sum_{i \in T'} (f_i + \sum_{j \in A(i)} c_{ij}) + \sum_{j \in Z} c_{\sigma(j)j}\leq \sum_{i \in T'} \sum_{j \in A(i)} v_j + 3 \sum_{j \in Z} v_j \leq 3 \sum_{j \in D} v_j\leq 3\,\opt(I)\]
+    \[\sum_{i \in T'} (f_i + \sum_{j \in N(i)} c_{ij}) + \sum_{j \in Z} c_{\sigma(j)j}\leq \sum_{i \in T'} \sum_{j \in N(i)} v_j + 3 \sum_{j \in Z} v_j \leq 3 \sum_{j \in D} v_j\leq 3\,\opt(I)\]
     em que a última desigualdade vale pela dualidade fraca.
 \end{proof}
 Esse algoritmo é de autoria de Jain e Vazirani~\cite{JV} e leva suas iniciais como nome.
@@ -458,13 +462,13 @@ Dada essa definição, vamos enunciar um lema que irá nos ajudar a provar uma c
     Sejam $(x^*,y^*)$ e $(v^*,w^*)$ soluções do programa linear e do seu dual, respectivamente, e $j$ um cliente qualquer. Para todo $i \in N(j)$, $c_{ij} \leq v^*_j$.
 \end{lemma}
 \begin{proof}
-    Como $i \in N(j)$, então $x^*_{ij}>0$. Assim, pelas folgas complementares, a desigualdade do dual correspondente a~\ref{P4} vale por igualdade, então $v^*_j - w^*_{ij} = c_{ij}$. Como $w^*_{ij} \geq 0$, $c_{ij} \leq v^*_j$. 
+    Como $i \in N(j)$, então $x^*_{ij}>0$. Assim, pelas folgas complementares, a desigualdade do dual correspondente a~\eqref{P4} vale por igualdade, então $v^*_j - w^*_{ij} = c_{ij}$. Como $w^*_{ij} \geq 0$, $c_{ij} \leq v^*_j$. 
 \end{proof}
 Com esse lema, sabemos que se em um conjunto $S \subseteq F$ de instalações abertas, para todo cliente $j \in D$, existe uma instalação aberta $i$ em $N(j)$, então $c_{ij}\leq v_j^*$ e o custo total de associação seria no máximo $\sum_{j\in D}v_j^* \leq \opt(I)$, uma vez que vale a dualidade forte e que o valor da solução do primal é no máximo $\opt(I)$. Entretanto, não é garantido uma cota superior para o custo de abertura de $S$. Vamos descobrir como encontrar um $S$ com um bom custo de abertura e um bom custo de associação. Seja $j_k$ um cliente qualquer. Se abrirmos a instalação $i_k$ mais barata de $N(j_k)$ conseguimos limitar o custo de sua abertura.
 \[\tag{*} \label{relx_fl:*}
     f_{i_k} = f_{i_k} \sum_{i \in N(j_k)}x^*_{ij_k} = \sum_{i \in N(j_k)}f_{i_k}x^*_{ij_k} \leq \sum_{i \in N(j_k)}f_{i}y^*_{i},
 \]
-onde a primeira igualdade vale por \ref{P3} e pela definição de $N(j_k)$ e a desigualdade vale por termos escolhido $i_k$ como a instalação mais barata de $N(j_k)$.
+onde a primeira igualdade vale por \eqref{P3} e pela definição de $N(j_k)$ e a desigualdade vale por termos escolhido $i_k$ como a instalação mais barata de $N(j_k)$.
 
 Essa informação será importante para a prova da razão de aproximação do nosso algoritmo. Agora, faremos uma última definição necessária para o nosso algoritmo.
 
@@ -502,7 +506,7 @@ Agora, vamos definir o algoritmo. Nele, $S$ será o conjunto das instalações a
     Agora, vamos mostrar que o algoritmo é uma $4$-aproximação.\\
     Perceba que, para $k_1$ e $k_2$ com $k_1 < k_2$, $N(j_{k_1})\cap N(j_{k_2}) = \emptyset$, caso contrário $j_{k_2} \in N^2(j_{k_1})$ e seria retirado de $C$ na iteração $k_1$.\\
     Seja $F' \subseteq F$, tal que $F' = \bigcup_k N(j_k)$.
-    Por (\ref{relx_fl:*}), vale que $f_{i_k} \leq \sum_{i \in N(j_k)}f_{i_k}y^*_{i}$. Então se somarmos para todo $k$, temos
+    Por \eqref{relx_fl:*}, vale que $f_{i_k} \leq \sum_{i \in N(j_k)}f_{i_k}y^*_{i}$. Então se somarmos para todo $k$, temos
     \[ \sum_kf_{i_k} \leq \sum_k \sum_{i \in N(j_k)}f_{i}y^*_{i} = \sum_{i \in F'}f_{i}y^*_{i} \leq \sum_{i \in F}f_{i}y^*_{i} \leq \opt(I)\]
     Agora, vamos fixar uma iteração $k$ e sejam $i = i_k$ e $j = j_k$. Denotemos por $C_k$ o conjunto $C$ no início da iteração $k$. Pelo Lema~\ref{lemma:3.5}, sabemos que $c_{ij} \leq v^*_j$. Seja $\ell \in N^2(j) \cap C_k \setminus \{j\}$ e $h \in N(\ell) \cap N(j)$. Pela desigualdade triangular e como $j$ minimiza $v^*_j$ em $C_k$, temos
     \[ c_{i\ell} \leq c_{ij} + c_{hj} + c_{h\ell} \leq v_j^* + v_j^* + v_{\ell}^* \leq 3 v_{\ell}^*
@@ -638,11 +642,11 @@ Agora que temos essas duas desigualdades, conseguimos mostrar o seguinte teorema
 \end{proof}
 Durante a prova da razão do nosso algoritmo utilizamos que $(2A^* + 3T^*) \leq 3\opt(I)$, vamos utilizar essa folga para melhorar o algoritmo. \\
 A partir da instância recebida, vamos criar uma nova instância dividindo o custo de abertura das facilidades por uma constante $\mu \leq 1$. Ao final, vamos encontrar um valor para $\mu$ que irá diminuir a razão de aproximação do algoritmo o máximo possível. \\
-Com essa nova instância do algoritmo, vamos encontrar uma solução viável com custo de abertura de instalações $\bar{A}$ e custo de transporte $\bar{T}$. Note que existe uma solução para essa nova instância com custos $\frac{A^*}{\mu}$ e $T^*$. Note também que no nosso lema não utilizamos necessariamente que a solução comparada era ótima, então os lemas valem também quando nossa solução é comparada com a solução anterior. Assim, vale que
-\[ \bar{T} - \frac{A^*}{\mu} - T^* \leq m\delta(\bar{A} + \bar{T})\]
+Com essa nova instância do algoritmo, vamos encontrar uma solução viável com custo de abertura de instalações $\overline{A}$ e custo de transporte $\overline{T}$. Note que existe uma solução para essa nova instância com custos $\frac{A^*}{\mu}$ e $T^*$. Note também que no nosso lema não utilizamos necessariamente que a solução comparada era ótima, então os lemas valem também quando nossa solução é comparada com a solução anterior. Assim, vale que
+\[ \overline{T} - \frac{A^*}{\mu} - T^* \leq m\delta(\overline{A} + \overline{T})\]
 e
-\[ \bar{A} - \frac{A^*}{\mu} - 2T^* \leq m\delta(\bar{A} + \bar{T}).\]
-Se multiplicarmos os custos de abertura das instalações escolhidas por $\mu$ temos o custo de uma solução viável para a instância original, seja $A = \mu\bar{A}$ e $T$ os custos dessa solução. Vale
+\[ \overline{A} - \frac{A^*}{\mu} - 2T^* \leq m\delta(\overline{A} + \overline{T}).\]
+Se multiplicarmos os custos de abertura das instalações escolhidas por $\mu$ temos o custo de uma solução viável para a instância original, seja $A = \mu\overline{A}$ e $T$ os custos dessa solução. Vale
 \[ T - \frac{A^*}{\mu} - T^* \leq m\delta(\frac{A}{\mu}+ T)\]
 e
 \[ \frac{A}{\mu} - \frac{A^*}{\mu} - 2T^* \leq m\delta(\frac{A}{\mu} + T),\]
